# ODMantic-Fernet-Field-Type

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
odmantic_fernet_field/: fernet_field.py
